<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/sources_mode_category_title">
        <ListPreference
            app:key="source_mode"
            app:title="@string/sources_mode_title"
            app:summary="@string/sources_mode_summary"
            app:entries="@array/source_mode_entries"
            app:entryValues="@array/source_mode_values"
            app:defaultValue="@string/source_mode_default"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/category_remote_streaming">
        <Preference
            app:key="source_apple"
            app:title="@string/sources_apple_title"
            app:summary="@string/sources_apple_summary"
            app:fragment="com.neilturner.aerialviews.ui.sources.AppleVideosFragment"/>

        <Preference
            app:key="source_amazon"
            app:title="@string/sources_amazon_title"
            app:summary="@string/sources_amazon_summary"
            app:fragment="com.neilturner.aerialviews.ui.sources.AmazonVideosFragment"/>

        <Preference
            app:key="source_comm1"
            app:title="@string/sources_comm1_title"
            app:summary="@string/sources_comm1_summary"
            app:fragment="com.neilturner.aerialviews.ui.sources.Comm1VideosFragment"/>

        <Preference
            app:key="source_comm2"
            app:title="@string/sources_comm2_title"
            app:summary="@string/sources_comm2_summary"
            app:fragment="com.neilturner.aerialviews.ui.sources.Comm2VideosFragment"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/category_custom_videos_and_feeds">
        <Preference
            app:title="@string/sources_local_title"
            app:summary="@string/sources_local_summary"
            app:fragment="com.neilturner.aerialviews.ui.sources.LocalVideosFragment"/>

        <Preference
            app:title="@string/sources_custom_feed_title"
            app:summary="@string/sources_custom_feed_summary"
            app:fragment="com.neilturner.aerialviews.ui.sources.CustomFeedFragment"/>

        <Preference
            app:title="@string/sources_youtube_title"
            app:summary="@string/sources_youtube_summary"
            app:fragment="com.neilturner.aerialviews.ui.sources.YouTubeSettingsFragment"/>

        <ListPreference
            app:key="yt_mix_weight"
            app:title="@string/youtube_mix_weight_title"
            app:entries="@array/youtube_mix_weight_entries"
            app:entryValues="@array/youtube_mix_weight_values"
            app:defaultValue="@string/youtube_mix_weight_default" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/category_network">
        <Preference
            app:title="@string/sources_samba_title"
            app:summary="@string/sources_samba_summary"
            app:fragment="com.neilturner.aerialviews.ui.sources.SambaVideosFragment"/>

        <Preference
            app:title="@string/sources_webdav_title"
            app:summary="@string/sources_webdav_summary"
            app:fragment="com.neilturner.aerialviews.ui.sources.WebDavVideosFragment"/>

        <Preference
            app:title="@string/sources_immich_title"
            app:summary="@string/sources_immich_summary"
            app:fragment="com.neilturner.aerialviews.ui.sources.ImmichVideosFragment"/>
    </PreferenceCategory>

</PreferenceScreen>
