<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <PreferenceCategory app:title="@string/category_video_source">
                <SwitchPreference
                    app:defaultValue="true"
                    app:key="yt_enabled"
                    app:title="@string/youtube_enabled_title" />

                <Preference
                    app:dependency="yt_enabled"
                    app:disableDependentsState="false"
                    app:key="yt_refresh_now"
                    app:title="@string/youtube_refresh_now_title"
                    app:summary="@string/youtube_refresh_now_summary" />

                <Preference
                    app:key="yt_cache_count"
                    app:title="@string/youtube_cache_count_title"
                    app:summary="@string/youtube_cache_count_pending"
                    app:selectable="false" />
        </PreferenceCategory>

        <PreferenceCategory
            app:title="@string/youtube_content_categories_title"
            app:summary="@string/youtube_content_categories_summary">

                <SwitchPreference
                    app:dependency="yt_enabled"
                    app:disableDependentsState="false"
                    app:key="yt_category_nature"
                    app:title="@string/youtube_category_nature_title"
                    app:summary="@string/youtube_category_nature_summary"
                    app:defaultValue="true" />

                <SwitchPreference
                    app:dependency="yt_enabled"
                    app:disableDependentsState="false"
                    app:key="yt_category_animals"
                    app:title="@string/youtube_category_animals_title"
                    app:summary="@string/youtube_category_animals_summary"
                    app:defaultValue="true" />

                <SwitchPreference
                    app:dependency="yt_enabled"
                    app:disableDependentsState="false"
                    app:key="yt_category_drone"
                    app:title="@string/youtube_category_drone_title"
                    app:summary="@string/youtube_category_drone_summary"
                    app:defaultValue="true" />

                <SwitchPreference
                    app:dependency="yt_enabled"
                    app:disableDependentsState="false"
                    app:key="yt_category_ocean"
                    app:title="@string/youtube_category_ocean_title"
                    app:summary="@string/youtube_category_ocean_summary"
                    app:defaultValue="true" />

                <SwitchPreference
                    app:dependency="yt_enabled"
                    app:disableDependentsState="false"
                    app:key="yt_category_space"
                    app:title="@string/youtube_category_space_title"
                    app:summary="@string/youtube_category_space_summary"
                    app:defaultValue="true" />

                <SwitchPreference
                    app:dependency="yt_enabled"
                    app:disableDependentsState="false"
                    app:key="yt_category_cities"
                    app:title="@string/youtube_category_cities_title"
                    app:summary="@string/youtube_category_cities_summary"
                    app:defaultValue="true" />

                <SwitchPreference
                    app:dependency="yt_enabled"
                    app:disableDependentsState="false"
                    app:key="yt_category_weather"
                    app:title="@string/youtube_category_weather_title"
                    app:summary="@string/youtube_category_weather_summary"
                    app:defaultValue="true" />

                <SwitchPreference
                    app:dependency="yt_enabled"
                    app:disableDependentsState="false"
                    app:key="yt_category_winter"
                    app:title="@string/youtube_category_winter_title"
                    app:summary="@string/youtube_category_winter_summary"
                    app:defaultValue="true" />

        </PreferenceCategory>

        <PreferenceCategory app:title="@string/youtube_playlist_category_title">
                <ListPreference
                    app:dependency="yt_enabled"
                    app:disableDependentsState="false"
                    app:key="yt_quality"
                    app:title="@string/youtube_quality_title"
                    app:summary="@string/youtube_quality_summary"
                    app:entries="@array/youtube_quality_entries"
                    app:entryValues="@array/youtube_quality_values"
                    app:defaultValue="@string/youtube_quality_default"
                    app:useSimpleSummaryProvider="true" />

                <SwitchPreference
                    app:dependency="yt_enabled"
                    app:disableDependentsState="false"
                    app:key="yt_shuffle"
                    app:title="@string/youtube_shuffle_title"
                    app:defaultValue="true" />

                <ListPreference
                    app:dependency="yt_enabled"
                    app:disableDependentsState="false"
                    app:key="yt_playback_length_mode"
                    app:title="@string/youtube_playback_length_mode_title"
                    app:summary="@string/youtube_playback_length_mode_summary"
                    app:entries="@array/youtube_playback_length_mode_entries"
                    app:entryValues="@array/youtube_playback_length_mode_values"
                    app:defaultValue="@string/youtube_playback_length_mode_default"
                    app:useSimpleSummaryProvider="true" />

                <ListPreference
                    app:dependency="yt_enabled"
                    app:disableDependentsState="false"
                    app:key="yt_playback_max_minutes"
                    app:title="@string/youtube_playback_max_minutes_title"
                    app:summary="@string/youtube_playback_max_minutes_summary"
                    app:entries="@array/youtube_playback_max_minutes_entries"
                    app:entryValues="@array/youtube_playback_max_minutes_values"
                    app:defaultValue="@string/youtube_playback_max_minutes_default"
                    app:useSimpleSummaryProvider="true" />
        </PreferenceCategory>
</PreferenceScreen>
